# odio

./: .gitattributes  .gitignore  .travis.yml  1.2  LICENSE  MANIFEST.in  README.rst  pyproject.toml  readme.adoc  setup.cfg  setup.py  tox.ini  try.ods  try.py
.github/: test.yml
.github/workflows/: test.yml
docs/: index.adoc
odfio/v1_1/: __init__.py
odio/: __init__.py  _version.py  common.py
odio/v1_1/: __init__.py
odio/v1_2/: __init__.py  elements.py  mapping.py  xml.py
test/: test_odio.py  test_readme.py
test/v1_1/: test_ods.py
test/v1_1/unpacked/: content.xml  meta.xml  styles.xml
test/v1_2/: test_elements.py  test_ods2.py  test_v1_2.py  test_xml.py
test/v1_2/unpacked/: content.xml  meta.xml  settings.xml  styles.xml
tests/: test_ods.py
tests/ods/: test.ods
tests/ods/unpacked/: content.xml  meta.xml  settings.xml  styles.xml  test.ods
tests/v1_1/: make_ods.py  test.ods  test_ods.py
tests/v1_1/ods/: test.ods
tests/v1_1/ods/unpacked/: content.xml  meta.xml  settings.xml  styles.xml
tests/v1_1/unpacked/: content.xml  settings.xml
tests/v1_2/: test_ods2.py
tests/v1_2/unpacked/: content.xml
