[metadata]
name = odio
author = The Contributors
description = A library for the import / export of ODF documents.
url = https://github.com/tlocke/odio
license = MIT
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Operating System :: OS Independent
keywords = odf ods odt


[options]
python_requires = >=3.7
install_requires =
    importlib-metadata >= 1.0 ; python_version < "3.8"
packages = 
    odio
    odio.v1_1
    odio.v1_2


[flake8]
application-names = odio
ignore = E203,W503
max-line-length = 88
exclude = .git,__pycache__,build,dist,venv,.tox
application-import-names = odio
